force-app/main/default/objects/Sample_Item__c/Sample_Item__c.object-meta.xml
<CustomObject>
    <label>Sample Item</label>
    <nameField>
        <label>Sample Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>