force-app/main/default/objects/Sample_Item__c/fields/Color_Site__c.field-meta.xml
<CustomField>
    <fullName>Color_Site__c</fullName>
    <label>Color Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>