force-app/main/default/objects/Sample_Item__c/fields/Customization__c.field-meta.xml
<CustomField>
    <fullName>Customization__c</fullName>
    <label>Customization</label>
    <type>TextArea</type>
</CustomField>