force-app/main/default/objects/Sample_Item__c/fields/Description1__c.field-meta.xml
<CustomField>
    <fullName>Description1__c</fullName>
    <formula>Product__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description 1</label>
    <type>Text</type>
</CustomField>