force-app/main/default/objects/Sample_Item__c/fields/Description_2__c.field-meta.xml
<CustomField>
    <fullName>Description_2__c</fullName>
    <formula>Product__r.Product_Description_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description 2</label>
    <type>Text</type>
</CustomField>