force-app/main/default/objects/Sample_Item__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glossy</fullName>
            </value>
            <value>
                <fullName>Matte</fullName>
            </value>
            <value>
                <fullName>Polished</fullName>
            </value>
            <value>
                <fullName>Honed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>