force-app/main/default/objects/Sample_Item__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Sample Items</relationshipLabel>
    <relationshipName>Sample_Items</relationshipName>
    <type>Lookup</type>
</CustomField>