force-app/main/default/objects/Sample_Item__c/fields/Manufacturer_Does_Not_Exits__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Does_Not_Exits__c</fullName>
    <label>Manufacturer Does Not Exits In System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>