force-app/main/default/objects/Sample_Item__c/fields/Manufacturer_s_Item__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_s_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample part Number</label>
    <referenceTo>Manufacturer_s_Items__c</referenceTo>
    <relationshipLabel>Sample Items</relationshipLabel>
    <relationshipName>Sample_Items</relationshipName>
    <type>Lookup</type>
</CustomField>