force-app/main/default/objects/Sample_Item__c/fields/Manufecturer_Site__c.field-meta.xml
<CustomField>
    <fullName>Manufecturer_Site__c</fullName>
    <label>Manufecturer Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>