force-app/main/default/objects/Sample_Item__c/fields/Sample_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Sample_Item_Name__c</fullName>
    <label>Sample Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>