force-app/main/default/objects/Sample_Item__c/fields/Sample_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Request Form</label>
    <referenceTo>Sample_Request_Form__c</referenceTo>
    <relationshipLabel>Sample Items</relationshipLabel>
    <relationshipName>Sample_Items</relationshipName>
    <type>Lookup</type>
</CustomField>