force-app/main/default/objects/Sample_Item__c/fields/sample_type__c.field-meta.xml
<CustomField>
    <fullName>sample_type__c</fullName>
    <label>sample type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock Sample</fullName>
            </value>
            <value>
                <fullName>Special Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>