force-app/main/default/objects/Sample_Item__c/fields/Series_Site__c.field-meta.xml
<CustomField>
    <fullName>Series_Site__c</fullName>
    <label>Series Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>