force-app/main/default/objects/Sample_Item__c/fields/Size_Site__c.field-meta.xml
<CustomField>
    <fullName>Size_Site__c</fullName>
    <label>Size Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>